feat: initial Masa Server

--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -7,3 +7,6 @@ plugins:
   - plugin: buf.build/protocolbuffers/go
     out: ../pb
     opt: paths=source_relative
+  - plugin: connect-go
+    out: ../pb
+    opt: paths=source_relative
